--- a/clases/class_1/clase_1.ipynb
+++ b/clases/class_1/clase_1.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "# ¿Qué es python?\n",
     " \n",
-    "Python es un lenguaje de programación de alto nivel y fácil de aprender, que se utiliza ampliamente en una variedad de campos, incluyendo la ciencia de datos, el desarrollo de aplicaciones web y la automatización de tareas. \n",
+    "Python es un lenguaje de programación de alto # Nivel y fácil de aprender, que se utiliza ampliamente en una variedad de campos, incluyendo la ciencia de datos, el desarrollo de aplicaciones web y la automatización de tareas. \n",
     "\n",
     "# ¿Por qué aprender python?\n",
     "\n",
@@ -1116,6 +1116,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "b7c4f15b-a397-4f10-878a-3c88735a456d",
    "metadata": {},
@@ -1954,6 +1961,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (781927414.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [13]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(import this)\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "invisible-snake",
    "metadata": {
@@ -2151,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "empty-episode",
    "metadata": {
     "ExecuteTime": {
@@ -2159,14 +2182,35 @@
      "start_time": "2021-03-22T19:47:25.636406Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Bool1  -  Bool2 |  Resultado\n",
+      "------------------------------\n",
+      "| True  and True  |  True\n",
+      "| False and True  |  False\n",
+      "| True  and False |  False\n",
+      "| False and False |  False\n",
+      "| True  and True  |  1\n",
+      "| False and True  |  0\n",
+      "| True  and False |  0\n",
+      "| False and False |  0\n"
+     ]
+    }
+   ],
    "source": [
     "print('| Bool1  -  Bool2 |  Resultado')\n",
     "print('------------------------------')\n",
-    "print('| True  and True  | ', True and True)\n",
-    "print('| False and True  | ', False and True)\n",
-    "print('| True  and False | ', True and False)\n",
-    "print('| False and False | ', False and False)"
+    "print('| True  and True  | ', True and True)#true \n",
+    "print('| False and True  | ', False and True)#false\n",
+    "print('| True  and False | ', True and False)#false\n",
+    "print('| False and False | ', False and False)#false\n",
+    "print('| True  and True  | ', 1 * 1)#true \n",
+    "print('| False and True  | ', 0 * 1)#false\n",
+    "print('| True  and False | ', 1 * 0)#false\n",
+    "print('| False and False | ', 0 * 0)#false"
    ]
   },
   {
@@ -2181,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "played-breakfast",
    "metadata": {
     "ExecuteTime": {
@@ -2189,14 +2233,36 @@
      "start_time": "2021-03-22T19:47:40.858245Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Bool1  -  Bool2 |  Resultado\n",
+      "------------------------------\n",
+      "| True  or True  |  True\n",
+      "| False or True  |  True\n",
+      "| True  or False |  True\n",
+      "| False or False |  False\n",
+      "| True  or True  |  2\n",
+      "| False or True  |  1\n",
+      "| True  or False |  1\n",
+      "| False or False |  0\n"
+     ]
+    }
+   ],
    "source": [
     "print('| Bool1  -  Bool2 |  Resultado')\n",
     "print('------------------------------')\n",
     "print('| True  or True  | ', True or True)\n",
     "print('| False or True  | ', False or True)\n",
     "print('| True  or False | ', True or False)\n",
-    "print('| False or False | ', False or False)"
+    "print('| False or False | ', False or False)\n",
+    "\n",
+    "print('| True  or True  | ', 1 + 1)\n",
+    "print('| False or True  | ', 0 + 1)\n",
+    "print('| True  or False | ', 1 + 0)\n",
+    "print('| False or False | ', 0 + 0)"
    ]
   },
   {
@@ -2212,10 +2278,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ad43ed3c-e999-41ad-9b5a-56079ccef153",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Bool1      |  Resultado\n",
+      "-------------------------\n",
+      "| not True   |  False\n",
+      "| not False  |  True\n"
+     ]
+    }
+   ],
    "source": [
     "print('| Bool1      |  Resultado')\n",
     "print('-------------------------')\n",
@@ -2233,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "innocent-drive",
    "metadata": {
     "ExecuteTime": {
@@ -2257,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "acquired-lambda",
    "metadata": {
     "ExecuteTime": {
@@ -2265,17 +2342,39 @@
      "start_time": "2021-03-22T19:48:24.645776Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "variable_1 == True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "94d0ecee-42b1-453e-941d-3db430af64c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "variable_2 == True"
    ]
@@ -2303,16 +2402,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "joaquin\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Inputs\n",
     "name = input('¿Cuál es tu nombre? ')\n",
     "age = input('¿Cuántos años tienes? ')\n",
     "print(name)\n",
-    "print(age)\n",
-    "\n",
+    "print(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Cambiamos su tipo\n",
     "name = 24\n",
     "age = \"joaquin\"\n",
@@ -2325,6 +2440,15 @@
     "address = 5\n",
     "address = 1.2\n",
     "print(type(address))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#TODO:\n",
+    "\n",
+    "por cada contenido hacer un ejemplo y ejercicio \n"
    ]
   },
   {
@@ -4927,16 +5051,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f892f5d5-31eb-4a7f-a967-e7f1c7012fb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "fitting-firewall",
    "metadata": {
     "ExecuteTime": {
@@ -5227,7 +5341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# nivel principiante\n",
+    "# # Nivel principiante\n",
     "\n",
     "# Ejercicio 1: \n",
     "Haz un programa que imprima tu nombre y tu edad.\n",
@@ -5238,12 +5352,12 @@
     "# Ejercicio 3:\n",
     "Haz un programa que imprima el resultado de la resta de dos números.\n",
     "\n",
-    "# nivel intermedio\n",
+    "# # Nivel intermedio\n",
     "\n",
     "# Ejercicio 4:\n",
     "\n",
     "\n",
-    "Nivel intermedio\n",
+    "# Nivel intermedio\n",
     "Ejercicio 1:\n",
     "Haz un programa que imprima todos los números pares entre 1 y 100.\n",
     "\n",
@@ -5256,7 +5370,7 @@
     "Ejercicio 4:\n",
     "Haz un programa que pida al usuario ingresar una lista de números enteros, y luego imprima el mayor y el menor de los números de la lista.\n",
     "\n",
-    "Nivel avanzado\n",
+    "# Nivel avanzado\n",
     "Ejercicio 1:\n",
     "Haz un programa que calcule el factorial de un número ingresado por el usuario. Recuerda que el factorial de un número n es el producto de todos los números enteros desde 1 hasta n. Por ejemplo, el factorial de 4 es 4 * 3 * 2 * 1 = 24.\n",
     "\n",
@@ -5270,7 +5384,7 @@
     "Haz un programa que implemente una lista enlazada. Una lista enlazada es una estructura de datos que consiste en un conjunto de nodos, donde cada nodo tiene un valor y una referencia (enlace) al siguiente nodo en la lista. Tu programa debe permitir al usuario agregar y eliminar nodos de la lista, así como imprimir el contenido de la lista.\n",
     "\n",
     "\n",
-    "Nivel avanzado\n",
+    "# Nivel avanzado\n",
     "Ejercicio 5:\n",
     "Haz un programa que calcule la suma de los dígitos de un número ingresado por el usuario. Por ejemplo, la suma de los dígitos del número 123 es 6 (1 + 2 + 3).\n",
     "\n",
@@ -5285,8 +5399,8 @@
     "\n",
     "\n",
     "\n",
-    "dame 4 ejercicios de nivel principiante, intermedio, avanzado y experto de Variables y tipos de datos en python \n",
-    "Nivel principiante\n",
+    "dame 4 ejercicios de # Nivel principiante, intermedio, avanzado y experto de Variables y tipos de datos en python \n",
+    "# Nivel principiante\n",
     "Ejercicio 1:\n",
     "Declara una variable llamada nombre y asigna tu nombre como valor. Luego imprime el valor de la variable.\n",
     "\n",
@@ -5299,7 +5413,7 @@
     "Ejercicio 4:\n",
     "Declara una variable llamada saldo y asigna un valor numérico a la misma. Luego imprime el valor de la variable en un formato legible para el usuario, con el símbolo de la moneda y dos decimales.\n",
     "\n",
-    "Nivel intermedio\n",
+    "# Nivel intermedio\n",
     "Ejercicio 5:\n",
     "Declara una variable llamada lista y asigna una lista de números enteros como valor. Luego imprime el segundo elemento de la lista.\n",
     "\n",
@@ -5312,7 +5426,7 @@
     "Ejercicio 8:\n",
     "Declara una variable llamada hora y asigna un objeto datetime con la hora actual. Luego imprime el valor de la variable en el formato hh:mm:ss.\n",
     "\n",
-    "Nivel avanzado\n",
+    "# Nivel avanzado\n",
     "Ejercicio 9:\n",
     "Declara una variable llamada numero_complexo y asigna un número complejo como valor. Luego imprime el valor de la parte real y la parte imaginaria del número.\n",
     "\n",
@@ -5325,10 +5439,8 @@
     "Ejercicio 12:\n",
     "Declara una variable llamada bytes y asigna una secuencia de bytes que represente una imagen en formato JPEG. Luego esc\n",
     "\n",
+    "# Nivel experto\n",
     "\n",
-    "\n",
-    "continua \n",
-    "Nivel experto\n",
     "Ejercicio 13:\n",
     "Declara una variable llamada modulo y asigna un módulo importado de un paquete externo. Luego utiliza la variable para acceder a una función del módulo y ejecutarla.\n",
     "\n",
@@ -5343,15 +5455,15 @@
     "\n",
     "\n",
     "\n",
-    "otro ejercicio nivel avanzado \n",
-    "Nivel avanzado\n",
+    "# Nivel avanzado\n",
     "Ejercicio 17:\n",
     "Haz un programa que lea un archivo de texto y cuente la cantidad de veces que aparece cada palabra en el archivo. Tu programa debe ignorar mayúsculas y minúsculas y eliminar signos de puntuación. Luego imprime las palabras y sus respectivas frecuencias en orden descendente de frecuencia.\n",
     "\n",
     "\n",
     "\n",
-    "dame 4 ejercicios de nivel principiante, intermedio, avanzado y experto para el tema de tipos de datos en python \n",
-    "Nivel principiante\n",
+    "\n",
+    "# Nivel principiante\n",
+    "\n",
     "Ejercicio 1:\n",
     "Declara una variable llamada numero y asigna un valor numérico a la misma. Luego imprime el tipo de la variable.\n",
     "\n",
@@ -5364,7 +5476,8 @@
     "Ejercicio 4:\n",
     "Declara una variable llamada lista y asigna una lista de valores de diferentes tipos a la misma. Luego itera sobre los elementos de la lista y imprime el tipo de cada uno.\n",
     "\n",
-    "Nivel intermedio\n",
+    "# # Nivel intermedio\n",
+    "\n",
     "Ejercicio 5:\n",
     "Declara una variable llamada diccionario y asigna un diccionario con pares clave-valor de diferentes tipos. Luego itera sobre las claves y valores del diccionario y imprime el tipo de cada uno.\n",
     "\n",
@@ -5377,7 +5490,8 @@
     "Ejercicio 8:\n",
     "Declara una variable llamada rango y asigna un rango de números enteros. Luego itera sobre los elementos del rango y imprime el tipo de cada uno.\n",
     "\n",
-    "Nivel avanzado\n",
+    "# # Nivel avanzado\n",
+    "\n",
     "Ejercicio 9:\n",
     "Declara una variable llamada numero_complexo y asigna un número complejo como valor. Luego imprime el tipo de la variable.\n",
     "\n",
@@ -5390,12 +5504,10 @@
     "Ejercicio 12:\n",
     "Declara una variable llamada archivo y asigna un archivo abierto en modo lectura. Luego imprime el tipo de la variable.\n",
     "\n",
-    "Nivel experto\n",
-    "E\n",
+    "# # Nivel experto\n",
     "\n",
+    "# Nivel experto\n",
     "\n",
-    "continua\n",
-    "Nivel experto\n",
     "Ejercicio 13:\n",
     "Declara una variable llamada modulo y asigna un módulo importado de un paquete externo. Luego imprime el tipo de la variable.\n",
     "\n",
@@ -5410,8 +5522,8 @@
     "\n",
     "\n",
     "\n",
-    "otros ejercicios \n",
-    "Nivel principiante\n",
+    "# # Nivel principiante\n",
+    "\n",
     "Ejercicio 1:\n",
     "Haz un programa que pida al usuario ingresar su nombre y luego lo salude.\n",
     "\n",
@@ -5424,7 +5536,7 @@
     "Ejercicio 4:\n",
     "Haz un programa que pida al usuario ingresar una frase y luego cuente cuántas veces se repite cada letra en la frase.\n",
     "\n",
-    "Nivel intermedio\n",
+    "# Nivel intermedio\n",
     "Ejercicio 5:\n",
     "Haz un programa que convierta una cantidad de dólares a euros y luego muestre el resultado. Recuerda que 1 dólar equivale a 0.84 euros.\n",
     "\n",
@@ -5434,8 +5546,8 @@
     "\n",
     "\n",
     "\n",
-    "dame 4 ejercicios de nivel principiante, intermedio, avanzado y experto para el tema de Operaciones con Strings en python  \n",
-    "Nivel principiante\n",
+    "dame 4 ejercicios de # Nivel principiante, intermedio, avanzado y experto para el tema de Operaciones con Strings en python  \n",
+    "# Nivel principiante\n",
     "Ejercicio 1:\n",
     "Haz un programa que pida al usuario ingresar su nombre y apellido y luego los muestre juntos en una sola línea.\n",
     "\n",
@@ -5448,7 +5560,7 @@
     "Ejercicio 4:\n",
     "Haz un programa que pida al usuario ingresar una frase y luego cuente cuántas veces se repite cada letra en la frase.\n",
     "\n",
-    "Nivel intermedio\n",
+    "# Nivel intermedio\n",
     "Ejercicio 5:\n",
     "Haz un programa que pida al usuario ingresar una frase y luego reemplace todas las vocales por la letra \"X\".\n",
     "\n",
@@ -5464,14 +5576,14 @@
     "Copy code\n",
     "Hola mu\n",
     "ndo\n",
-    "Nivel avanzado\n",
+    "# Nivel avanzado\n",
     "Ejercicio 9:\n",
     "Haz un programa que pida al usuario ingresar una frase y luego la cifre utilizando el cif\n",
     "\n",
     "\n",
     "\n",
     "CONTINUA \n",
-    "Nivel avanzado\n",
+    "# Nivel avanzado\n",
     "Ejercicio 9:\n",
     "Haz un programa que pida al usuario ingresar una frase y luego la cifre utilizando el cifrado César. El usuario debe ingresar el número de desplazamientos a realizar y el programa debe aplicar el cifrado a todas las letras de la frase.\n",
     "\n",
@@ -5488,7 +5600,7 @@
     "Hola mu\n",
     "ndo cr\n",
     "uel\n",
-    "Nivel experto\n",
+    "# Nivel experto\n",
     "Ejercicio 13:\n",
     "Haz un programa que pida al usuario ingresar una frase y luego elimine todas las palabras de la misma que no tengan vocales.\n",
     "\n",
@@ -5503,8 +5615,8 @@
     "\n",
     "\n",
     "\n",
-    "dame 4 ejercicios de nivel principiante, intermedio, avanzado y experto para el tema de Operaciones con Strings y Operadores con booleanos en python   \n",
-    "Nivel principiante\n",
+    "dame 4 ejercicios de # Nivel principiante, intermedio, avanzado y experto para el tema de Operaciones con Strings y Operadores con booleanos en python   \n",
+    "# Nivel principiante\n",
     "Ejercicio 1:\n",
     "Haz un programa que pida al usuario ingresar dos números y luego muestre True si ambos números son iguales y False en caso contrario.\n",
     "\n",
@@ -5517,7 +5629,7 @@
     "Ejercicio 4:\n",
     "Haz un programa que pida al usuario ingresar dos números y luego muestre True si el primer número es mayor o igual que el segundo y False en caso contrario.\n",
     "\n",
-    "Nivel intermedio\n",
+    "# Nivel intermedio\n",
     "Ejercicio 5:\n",
     "Haz un programa que pida al usuario ingresar dos números y luego muestre True si el primer número es menor que el segundo y False en caso contrario.\n",
     "\n",
@@ -5530,7 +5642,7 @@
     "Ejercicio 8:\n",
     "Haz un programa que pida al usuario ingresar dos números y luego muestre True si el primer número es par y False en caso contrario.\n",
     "\n",
-    "Nivel avanzado\n",
+    "# Nivel avanzado\n",
     "Ejercicio 9:\n",
     "Haz un programa que pida al usuario ingresar dos números y luego muestre True si el primer número es impar y False en caso contrario.\n",
     "\n",
@@ -5543,7 +5655,7 @@
     "\n",
     "\n",
     "continuar\n",
-    "Nivel avanzado\n",
+    "# Nivel avanzado\n",
     "Ejercicio 11:\n",
     "Haz un programa que pida al usuario ingresar dos números y luego muestre True si el primer número es múltiplo del segundo y False en caso contrario.\n",
     "\n",
@@ -5556,7 +5668,7 @@
     "Ejercicio 14:\n",
     "Haz un programa que pida al usuario ingresar dos frases y luego muestre True si ambas frases son diferentes y False en caso contrario.\n",
     "\n",
-    "Nivel experto\n",
+    "# Nivel experto\n",
     "Ejercicio 15:\n",
     "Haz un programa que pida al usuario ingresar una frase y luego muestre True si todas las palabras de la frase tienen la misma longitud y False en caso contrario.\n",
     "\n",
@@ -5566,7 +5678,7 @@
     "\n",
     "\n",
     "continuar\n",
-    "Nivel experto\n",
+    "# Nivel experto\n",
     "Ejercicio 16:\n",
     "Haz un programa que pida al usuario ingresar una frase y luego muestre True si todas las palabras de la frase tienen la misma longitud y False en caso contrario.\n",
     "\n",
@@ -5632,7 +5744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
