--- a/clases/class_1/clase_1.ipynb
+++ b/clases/class_1/clase_1.ipynb
@@ -70,12 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, mundo!\n",
+      "Bienvenidos a la clase de introducción a Python\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hola, mundo!\")\n",
-    "print(\"Bienvenidos a la clase de introducción a Python\")"
+    "print(\"Bienvenidos a la clase de introducción a \")"
    ]
   },
   {
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3975,7 +3984,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "APRENDIZAJE",
+   "display_name": "programa",
    "language": "python",
    "name": "python3"
   },
@@ -3994,7 +4003,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "73369b4007d09f9dee8cba67e1bcef82294aca043eae1b9485c2a84ba598dee1"
+    "hash": "5a86a036ae29ac9264c5a9c859e081a7b1664ef413cfe62c6381147dd6484007"
    }
   }
  },
