--- a/clases/class_1/clase_1.ipynb
+++ b/clases/class_1/clase_1.ipynb
@@ -329,9 +329,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'conjunto' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m conjunto\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(conjunto))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'conjunto' is not defined"
+     ]
+    }
+   ],
    "source": [
     "conjunto\n",
     "print(type(conjunto))"
@@ -435,9 +447,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "int(3.14)"
    ]
@@ -653,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "joined-deviation",
    "metadata": {
     "ExecuteTime": {
@@ -668,7 +691,7 @@
        "7"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "checked-baker",
    "metadata": {
     "ExecuteTime": {
@@ -1315,14 +1338,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39m3\u001b[39;49m \u001b[39m>\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39m3\u001b[39;49m\u001b[39m\"\u001b[39;49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'int' and 'str'"
+     ]
     }
    ],
    "source": [
@@ -1341,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "916267f8-fef4-40e3-8af5-18d2e5472c25",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1375,7 @@
        "True"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "mounted-transaction",
    "metadata": {
     "ExecuteTime": {
@@ -1578,7 +1602,7 @@
        "'¿deseas frutita?'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "lasting-courage",
    "metadata": {
     "ExecuteTime": {
@@ -1620,7 +1644,19 @@
      "start_time": "2021-03-22T19:44:42.061506Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'respuesta_a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m respuesta_a \u001b[39m/\u001b[39m \u001b[39m10\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'respuesta_a' is not defined"
+     ]
+    }
+   ],
    "source": [
     "respuesta_a / 10"
    ]
@@ -1699,10 +1735,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "73d477d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'¿deseas frutita?'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pregunta_completa"
    ]
@@ -1725,17 +1772,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "45ea8b6b-1e39-4550-8905-2f533852edf7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'¿deseas frutita?'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pregunta_completa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "satellite-volume",
    "metadata": {
     "ExecuteTime": {
@@ -1743,7 +1801,18 @@
      "start_time": "2021-03-22T19:46:07.724763Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lower: ¿deseas frutita?\n",
+      "Upper: ¿DESEAS FRUTITA?\n",
+      "Title: ¿Deseas Frutita?\n",
+      "Capitalize: ¿deseas frutita?\n"
+     ]
+    }
+   ],
    "source": [
     "print('Lower:', pregunta_completa.lower())\n",
     "print('Upper:', pregunta_completa.upper())\n",
@@ -2240,10 +2309,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2b291f92-1831-4ed0-801a-654b2d8c8fdf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# es 2 igual a 2?\n",
     "2 == 2"
@@ -2251,10 +2331,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4244aa9c-c268-4e30-9856-755bca4659d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(2 == 2)"
    ]
@@ -4681,10 +4772,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bf5d7ccb-3c35-4675-ba36-317771f96ded",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(range(10))"
    ]
@@ -4799,7 +4901,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "model-chain-torch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4813,12 +4915,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.4 (tags/v3.9.4:1f2e308, Apr  6 2021, 13:40:21) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "60bcaf085a2b53a717294cab3711cda615bb4acd2b3c7f620853f26e14e61f81"
+    "hash": "cce4e09f854a1781d84781cadf8d7f593ce6ae0f432a160824e54726800b9a37"
    }
   }
  },
