--- a/mati/proyecto0.ipynb
+++ b/mati/proyecto0.ipynb
@@ -433,34 +433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5253\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = int(input('Coloca un valor'))\n",
-    "numeros = list(range(n+1))\n",
-    "suma = sum(numeros)\n",
-    "print(suma)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La suma de los primeros 102 números es: 5253.0\n",
+      "La suma de los primeros 101 números es: 5151.0\n",
       "Este resultado resulta ser una aproximación.\n"
      ]
     }
@@ -828,14 +808,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Es usted muy joven.\n"
+      "Usted recién tiene un cuarto de siglo.\n"
      ]
     }
    ],
@@ -849,13 +829,13 @@
     "\n",
     "#EJEMPLO:\n",
     "#En primer lugar se coloca una interacción con el usuario el cual debe ingresar su edad\n",
-    "pregunta = int(input('Hola!, ¿cuántos años tienes?'))\n",
+    "pregunta = input('Hola!, ¿cuántos años tienes?')\n",
     "#Según su respuesta, la consola imprimira 3 posibles mensajes, según se active primero la condición IF, ELIF o ELSE.\n",
     "\n",
-    "if pregunta > 25:\n",
+    "if  int(pregunta) > int('25'):\n",
     "    print('Es usted muy viejo.')\n",
     " \n",
-    "elif pregunta < 25:\n",
+    "elif int(pregunta) < int('25'):\n",
     "    print('Es usted muy joven.')\n",
     "else: \n",
     "    print('Usted recién tiene un cuarto de siglo.')"
@@ -863,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -875,36 +855,36 @@
     }
    ],
    "source": [
-    "respuesta = input('Hola!, ¿qué deseas para comer?')\n",
+    "pregunta = input('Hola!, ¿qué deseas para comer?')\n",
     "\n",
-    "if respuesta == 'carne':\n",
+    "if  pregunta == 'carne':\n",
     "    print('Hoy tenemos pollo asado.')    \n",
-    "elif respuesta == 'verdura':\n",
-    "    print('Hoy tenemos porotos con riendas.')\n",
+    "elif pregunta == 'verdura':\n",
+    "     print('Hoy tenemos porotos con riendas.')\n",
     "else:\n",
-    "    pregunta2 = input('¿Quizá quieres comer papas fritas?')\n",
-    "    if   pregunta2 == 'si':\n",
-    "        pregunta3 = input('Pueden ser con o sin huevo frito.')\n",
-    "        if   pregunta3 == 'sin':\n",
-    "            print('En ese caso tenemos solo papas fritas con cebolla caramelizada')\n",
-    "        elif   pregunta3 == 'con':\n",
-    "            print('Las papas fritas vienen con 2 huevos.')\n",
-    "    elif pregunta2 == 'no' :\n",
-    "        print('Mejor venga mañana.')"
+    "   pregunta2 = input('¿Quizá quieres comer papas fritas?')\n",
+    "   if   pregunta2 == 'si':\n",
+    "    pregunta3 = input('Pueden ser con o sin huevo frito.')\n",
+    "    if   pregunta3 == 'sin':\n",
+    "       print('En ese caso tenemos solo papas fritas con cebolla acaramelizada')\n",
+    "    elif   pregunta3 == 'con':\n",
+    "        print('Las papas fritas vienen con 2 huevos.')\n",
+    "   elif pregunta2 == 'no' :\n",
+    "       print('Mejor venga mañana.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aquí parte el programa\n",
+      "gracias por escoger\n",
       "Este año puede ser bisiesto\n",
-      "Este año es bisiesto\n"
+      "es bisiesto\n"
      ]
     }
    ],
@@ -921,8 +901,8 @@
     "condicion_3 = año % 400\n",
     "condicion_3\n",
     "\n",
-    "if año >= 0:\n",
-    "    print('Aquí parte el programa')\n",
+    "if año > 0:\n",
+    "    print('gracias por escoger')\n",
     "    if condicion_1 == 0:\n",
     "     print('Este año puede ser bisiesto')\n",
     "     if condicion_2 != 0:\n",
@@ -931,10 +911,31 @@
     "             print('no es año bisiesto')\n",
     "     elif condicion_2 == 0 and condicion_3 == 0:\n",
     "             print('es bisiesto')\n",
-    "    else:\n",
+    "    elif condicion_1 != 0:\n",
     "        print('definitivamente no es bisiesto')\n",
-    "else:\n",
+    "elif 0 > año:\n",
     "    print('mal numero')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "condicion_3 = año % 100\n",
+    "condicion_3\n",
+    "\n",
+    "if condicion_3 != 100:\n",
+    "    print('hola mundo')"
    ]
   },
   {
@@ -1028,16 +1029,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "range(0, 5)"
+       "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1061,13 +1062,13 @@
        "'FELIPE'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista_curso[2]"
+    "lista_curso[indices[2]]"
    ]
   },
   {
@@ -1112,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1133,7 @@
     "n = int(input('ingresa un número del 0 al 4'))\n",
     "print(n)\n",
     "\n",
-    "index = lista_curso[n]\n",
+    "index = lista_curso[indices[n]]\n",
     "print(index)\n",
     "\n",
     "if 6 > len(index):\n",
@@ -1151,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1161,7 @@
        "['ALAIN', 'BASTIAN', 'JOAQUIN', 'FELIPE', 'MATÍAS']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,23 +1169,23 @@
    "source": [
     "#podemos agregar un elemento nuevo o cambiar el orden de los elementos de la lista de la siguiente forma:\n",
     "lista_curso[2] = 'JOAQUIN'\n",
-    "lista_curso[3]= 'FELIPE'\n",
+    "lista_curso[3] = 'FELIPE'\n",
     "lista_curso"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "JOAQUIN\n",
-      "Tu nombre tiene más de 6 caracteres.\n",
-      "tu nombre puede estar en la siguiente sublista: ['BASTIAN', 'JOAQUIN']\n"
+      "0\n",
+      "ALAIN\n",
+      "Tu nombre posee menos de 6 caracteres.\n",
+      "tu nombre puede estar en la siguiente sublista: ['ALAIN']\n"
      ]
     }
    ],
@@ -1213,23 +1214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ALAIN',\n",
-       " 'BASTIAN',\n",
-       " 'JOAQUIN',\n",
-       " 'FELIPE',\n",
-       " 'MATÍAS',\n",
-       " 'BENJAMIN',\n",
-       " 'BENJAMIN',\n",
-       " 'BENJAMIN']"
+       "['ALAIN', 'BASTIAN', 'JOAQUIN', 'FELIPE', 'MATÍAS', 'Benjamin', 'BENJAMIN']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,56 +1231,6 @@
    "source": [
     "lista_curso.append('BENJAMIN')\n",
     "lista_curso"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[True, False, True, True]\n"
-     ]
-    }
-   ],
-   "source": [
-    "lista_a = [True,False,True]\n",
-    "nueva = lista_a + [True]\n",
-    "print(nueva)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 10\n",
-      "1 20\n",
-      "2 30\n",
-      "3 40\n",
-      "4 50\n",
-      "5 60\n",
-      "6 70\n",
-      "7 80\n",
-      "8 90\n",
-      "9 100\n"
-     ]
-    }
-   ],
-   "source": [
-    "contador = 0\n",
-    "lista = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
-    "\n",
-    "while contador < len(lista):\n",
-    "    print(contador, lista[contador])\n",
-    "    contador += 1"
    ]
   },
   {
