--- a/mati/proyecto1.ipynb
+++ b/mati/proyecto1.ipynb
@@ -1291,6 +1291,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Matias, espero que estes bien\n"
+     ]
+    }
+   ],
+   "source": [
+    "saludo = input('ingresa tu nombre')\n",
+    "print(f'Hola {saludo}, espero que estes bien')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
