--- a/mati/proyecto1.ipynb
+++ b/mati/proyecto1.ipynb
@@ -1291,14 +1291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola Matias, espero que estes bien\n"
+      "Hola Pablo, espero que estes bien\n"
      ]
     }
    ],
