--- a/mati/proyecto1.ipynb
+++ b/mati/proyecto1.ipynb
@@ -1174,17 +1174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "JOAQUIN\n",
-      "Tu nombre tiene más de 6 caracteres.\n",
-      "tu nombre puede estar en la siguiente sublista: ['BASTIAN', 'JOAQUIN']\n"
+      "0\n",
+      "ALAIN\n",
+      "Tu nombre posee menos de 6 caracteres.\n",
+      "tu nombre puede estar en la siguiente sublista: ['ALAIN']\n"
      ]
     }
    ],
@@ -1213,23 +1213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ALAIN',\n",
-       " 'BASTIAN',\n",
-       " 'JOAQUIN',\n",
-       " 'FELIPE',\n",
-       " 'MATÍAS',\n",
-       " 'BENJAMIN',\n",
-       " 'BENJAMIN',\n",
-       " 'BENJAMIN']"
+       "['ALAIN', 'BASTIAN', 'JOAQUIN', 'FELIPE', 'MATÍAS', 'BENJAMIN']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,6 +1298,125 @@
    "source": [
     "saludo = input('ingresa tu nombre')\n",
     "print(f'Hola {saludo}, espero que estes bien')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz = [    \n",
+    "    [1, 2, 3],     \n",
+    "    [4, 5, 6],     \n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "\n",
+    "print(matriz[0])\n",
+    "print(matriz[1])\n",
+    "print(matriz[2])  # i = Tercera fila\n",
+    "\n",
+    "print(matriz[0][1]) #i = fila; #j = columna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3', '4']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#agregar cosas a una lista\n",
+    "lista_num = [ '1' , '2' , '3' ]\n",
+    "lista_num.append('4')\n",
+    "lista_num\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ALAIN'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_curso.pop(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BASTIAN', 'JOAQUIN', 'FELIPE', 'MATÍAS', 'BENJAMIN']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_curso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'🌭', '🍔', '🍕', '🍟'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comida_rapida = {'🍕','🍔', '🍟', '🌭', '🍳', '🥪'}\n",
+    "lista_desayuno = ['🥪', '🥖', '🍎', '🍳', '🥪', '🥐',  '🥪']\n",
+    "\n",
+    "comida_rapida.union(lista_desayuno)\n",
+    "comida_rapida.intersection(lista_desayuno)\n",
+    "\n",
+    "comida_rapida.difference(lista_desayuno)"
    ]
   },
   {
